# NSIS_Sample

./: CMakeLists.txt  installer.nsi  main.cpp
